[package]
name = "solhop"
version = "0.1.0"
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
edition = "2018"
description = """
SAT and MaxSAT Solver
"""
documentation = "https://docs.rs/solhop/"
homepage = "https://solhop.org/"
repository = "https://github.com/solhop/solhop"
readme = "README.md"
keywords = ["SAT", "MaxSAT", "Boolean", "Satisfiability", "Solver"]
categories = ["science"]
license = "MIT"
exclude = ["/.vscode/", "/.github/"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rsat", "msat", "solhop-types"]

[dependencies]
solhop-types = "=0.1.0"
rsat = "=0.1.11"
msat = "=0.1.0"
structopt = "0.3"

[patch.crates-io]
rsat = { path = "rsat" }
msat = { path = "msat" }
solhop-types = { path = "solhop-types" }
